fix(breadcrumb): realign arrows

--- a/packages/core/src/components/breadcrumb/_breadcrumb.scss
+++ b/packages/core/src/components/breadcrumb/_breadcrumb.scss
@@ -24,7 +24,7 @@
         content: '➝';
         font-size: 1.25rem;
         position: relative;
-        top: -0.25;
+        line-height: 1;
       }
     }
 
